added more params

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,39 +1,97 @@
-version: "3"
+version: "3.9"
 
 services:
-  postgresdb:
+  backend:
     build:
-      context: ./docker/postgresql
-      dockerfile: Dockerfile
-    enviroment:
-      - POSTGRES_PASSWORD=admin
-    volumes:
-      - ./docker/postgresql/init.sql:/docker-entrypoint-initdb.d/init.sql
-    ports:
-      - "5432:5432"
-
-  nobarrier:
-    build:
-      context: ./docker/backend
-      dockerfile: Dockerfile
+      context: .
+      dockerfile: docker/backend/Dockerfile
+    container_name: nobarrier
+    hostname: backend
     env_file:
       - .env
     volumes:
-      # reboot if has change
-      - ./:/usr/src/nobarrier
+      - ./src:/usr/src/app
     depends_on:
-      - postgresdb
+      - postgres_db
     ports:
-      - "8000:8000"
+      - "${SERVER_PORT}:${SERVER_PORT}"
+    restart: always
+#    command: uvicorn src.nobarrier.main:app --host 0.0.0.0 --port 8000 --reload
+    stdin_open: true  # Open StDIN for interactive sessions
+    tty: true         # Turn on the terminal (optionally, convenient for iPython)
+#    dns:
+#      - 8.8.8.8
+#      - 8.8.4.4
+    logging:
+      driver: "json-file"
+      options:
+        max-size: "10m"
+        max-file: "10"
+
+  migrations:
+    build:
+      context: .
+      dockerfile: docker/migrations/Dockerfile
+    container_name: nobarrier-migrations
+    env_file:
+      - .env
+    volumes:
+      - ./src:/usr/src/app
+    depends_on:
+      - postgres_db
+    working_dir: /usr/src/app/nobarrier/database/migrations
+    command: ["upgrade", "head"]
+    restart: "no"
+    logging:
+      driver: "json-file"
+      options:
+        max-size: "10m"
+        max-file: "2"
+
+  postgres_db:
+#    build:
+#      context: ./docker/postgresql
+#      dockerfile: Dockerfile
+    image: postgres:16
+    container_name: nobarrier-pgsql-db
+    restart: always
+    env_file:
+      - .env
+    environment:
+      POSTGRES_USER: ${POSTGRES_USER}
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
+      POSTGRES_DB: ${POSTGRES_DB}
+    volumes:
+#      - ./docker/postgresql/init.sql:/docker-entrypoint-initdb.d/init.sql
+      - postgres_data:/var/lib/postgresql/data
+    ports:
+      - "${POSTGRES_PORT}:5432"
+    logging:
+      driver: "json-file"
+      options:
+        max-size: "10m"
+        max-file: "2"
 
   nginx:
-    biuld:
+    build:
       context: ./docker/nginx
       dockerfile: Dockerfile
+    container_name: nginx
     depends_on:
-      - postgresdb
-      - nobarrier
+      - backend
     ports:
       - "80:80"
-    # volumes:
-      # - ./staticfiles/:/staticfiles
+      - "443:443"
+    volumes:
+      - ./docker/nginx/nginx.conf:/etc/nginx/conf.d/nginx.conf:ro
+      - ./docker/nginx/ssl:/etc/nginx/ssl:ro
+      - ./docker/nginx/html:/usr/share/nginx/html:ro  # for static files
+    restart: always
+    logging:
+      driver: "json-file"
+      options:
+        max-size: "10m"
+        max-file: "2"
+
+volumes:
+  postgres_data:
