--- a/docker/backend/requirements.txt
+++ b/docker/backend/requirements.txt
@@ -1,2 +1,21 @@
-fastapi
-sqlalchemy
+fastapi==0.117.1
+pydantic==2.11.9
+pydantic-settings==2.11.0
+uvicorn[standard]==0.37.0
+sqlalchemy==2.0.43
+alembic==1.16.5
+asyncpg==0.30.0
+aiosqlite==0.21.0
+passlib[bcrypt]==1.7.4
+bcrypt==4.3.0
+python-jose[cryptography]==3.5.0
+cryptography==46.0.1
+httpx==0.28.1
+websockets==15.0.1
+python-multipart==0.0.20
+python-dotenv==1.1.1
+pytest==8.4.2
+pytest-asyncio==1.2.0
+#sqladmin[full]==0.21.0  # admin panel 1
+#fastadmin[fastapi,sqlalchemy]==0.2.22 # admin panel 2 (Like in Django)
+
