--- a/docker/nginx/nginx.conf
+++ b/docker/nginx/nginx.conf
@@ -1,7 +1,32 @@
-server (
+server {
     listen 80;
 
     location / {
         proxy_pass http://nobarrier:8000;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
     }
-)
+}
+
+; server {
+;     listen 80;
+;     listen 443 ssl;
+;
+;     # SSL сертификаты (для dev можно использовать самоподписанные)
+;     ssl_certificate     /etc/nginx/ssl/server.crt;
+;     ssl_certificate_key /etc/nginx/ssl/server.key;
+;
+;     # Прокси на FastAPI backend
+;     location / {
+;         proxy_pass http://backend:8000;
+;         proxy_set_header Host $host;
+;         proxy_set_header X-Real-IP $remote_addr;
+;         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+;         proxy_set_header X-Forwarded-Proto $scheme;
+;     }
+;
+;     # Статические файлы (опционально)
+;     location /static/ {
+;         alias /usr/share/nginx/html/;
+;     }
+; }
